tests/testWorkflows/invalid_workflows/invalidInputWorkflow.playbook
{
    "name": "invalidInputWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "returnPlusOne",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "number",
                            "value": "abc"
                        }
                    ],
                    "name": "1",
                    "next_steps": [],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next_steps": [
                        {
                            "conditions": [
                                {
                                    "action": "regMatch",
                                    "app": "HelloWorld",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "transforms": [
                                        {
                                            "action": "length",
                                            "app": "HelloWorld",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}